# sawyer-cloud

./: .gitignore  .override-log.md  BOOTSTRAP.md  CLAUDE.md  INCIDENT_PLAYBOOK.md  MANAGEMENT_SERVER.md  MGMT_CTL_CLI_SPEC.md  README.md  RESEARCH_REPORT.md  compose.yaml
docs/: BOOTSTRAP_HISTORY.md  MERGE_PROCEDURE.md  ONBOARDING.md  OPERATOR_TASKS.md  RELEASES.md  RESEARCH_REPORT.md  STAGING_SETUP.md
management-server/: Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
management-server/alembic/: env.py
management-server/alembic/versions/: 0001_initial.py
management-server/app/: __init__.py  config.py  db.py  main.py  rbac.py
management-server/app/auth/: __init__.py  middleware.py  tokens.py
management-server/app/models/: __init__.py  agents.py  audits.py  base_images.py  commands.py  customers.py  feature_bindings.py  features.py  flavors.py  users.py
management-server/app/routers/: __init__.py  agents.py  auth.py  commands.py  customers.py  stubs.py
management-server/app/security/: __init__.py  csp.py  csrf.py  ratelimit.py
management-server/cli/: Makefile  README.md  go.mod  main.go
management-server/cli/cmd/: backup_upgrade_rollback.go  config.go  customers.go  root.go  session.go  stubs.go
management-server/cli/pkg/auth/: device_code.go  session.go
management-server/cli/pkg/client/: client.go  errors.go
management-server/cli/pkg/output/: formatter.go
management-server/tests/: _sqlite_compat.py  conftest.py  test_agents.py  test_customers.py  test_health.py  test_rbac.py
scripts/: Dockerfile.base  apply-smb.py  bootstrap.sh  build-base-image.sh  check-forbidden-paths.sh  deploy-staging.sh  (+4 more)
(+31 files in other folders)
