[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sawyer-mgmt"
version = "0.1.0"
description = "sawyer-cloud management server — FastAPI + Postgres control plane for Nextcloud AIO customer fleets."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "sawyer-cloud engineering" }]

dependencies = [
    # Web + async
    "fastapi>=0.112.0,<0.120",
    "uvicorn[standard]>=0.30.0,<0.35",
    "httpx>=0.27.0,<0.30",
    # Data layer
    "sqlalchemy>=2.0.30,<2.1",
    "alembic>=1.13.0,<2",
    "asyncpg>=0.29.0,<1",
    "psycopg[binary]>=3.2.0,<4",
    # Models + settings
    "pydantic>=2.7.0,<3",
    "pydantic-settings>=2.3.0,<3",
    # Auth
    "authlib>=1.3.0,<2",
    "python-jose[cryptography]>=3.3.0,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    # Utils
    "python-multipart>=0.0.9,<1",
    "structlog>=24.1.0,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9",
    "pytest-asyncio>=0.23.0,<0.25",
    "ruff>=0.5.0,<0.13",
    "mypy>=1.10.0,<2",
]

[project.urls]
Homepage = "https://github.com/sawyer-cloud/sawyer-cloud"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line-length handled separately; keep comments breathable
